bluetooth: Initialize start_notitications_in_progress_

This was causing StartNotifySession to hang randomly.

Also adds some logging to make sure we know what's happening.

BUG=624745

Review-Url: https://codereview.chromium.org/2115953002
Cr-Commit-Position: refs/heads/master@{#403831}

Former-commit-id: 7a941f9dd60b02e7b886b2774244ac5b04f1bf37